feat(primus-pipeline): refactor primus pipeline

--- a/primus/configs/modules/megatron/trainer_base.yaml
+++ b/primus/configs/modules/megatron/trainer_base.yaml
@@ -3,6 +3,7 @@ extends:
   - primus_megatron_module.yaml
   - primus_turbo.yaml
   - zero_bubble.yaml
+  - primus_pipeline.yaml
 
 trainable: true
 
