--- a/examples/megatron/configs/deepseek_v2_lite-pretrain.yaml
+++ b/examples/megatron/configs/deepseek_v2_lite-pretrain.yaml
@@ -80,6 +80,6 @@ modules:
       eval_iters: 0
 
       # Turbo
-      enable_primus_turbo: true
-      use_turbo_attention: true
-      use_turbo_grouped_mlp: true
+      enable_primus_turbo: false
+      use_turbo_attention: false
+      use_turbo_grouped_mlp: false
