--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -10,7 +10,7 @@ on:
   pull_request:
 
 env:
-  PRIMUS_TURBO_COMMIT: 006d15d7e83f63a3d655408e5ca69ce0a501a0ed # Fix import error of usp attention package (#177)
+  PRIMUS_TURBO_COMMIT: b1e35ef1db43cd309790747272c045b274559025 # setup: if aiter already installed, skipping (#178)
 
 jobs:
   code-lint:
@@ -97,27 +97,27 @@ jobs:
           elapsed=$((end_time - start_time))
           echo "⏱️ [build primus docker] Total elapsed time: ${elapsed} seconds"
 
-          echo "> Build Docker Image with tag: ${{ env.IMAGE_TAG }}-gfx950"
-          start_time=$(date +%s)
-          docker build -f $GITHUB_WORKSPACE/.github/workflows/docker/Dockerfile_gfx950 \
-               -t tasimage/primus:${{env.IMAGE_TAG}}-gfx950 \
-               --build-arg PRIMUS_TURBO_COMMIT=${PRIMUS_TURBO_COMMIT} .
-          end_time=$(date +%s)
-          elapsed=$((end_time - start_time))
-          echo "⏱️ [build primus docker-gfx950] Total elapsed time: ${elapsed} seconds"
+          # echo "> Build Docker Image with tag: ${{ env.IMAGE_TAG }}-gfx950"
+          # start_time=$(date +%s)
+          # docker build -f $GITHUB_WORKSPACE/.github/workflows/docker/Dockerfile_gfx950 \
+          #      -t tasimage/primus:${{env.IMAGE_TAG}}-gfx950 \
+          #      --build-arg PRIMUS_TURBO_COMMIT=${PRIMUS_TURBO_COMMIT} .
+          # end_time=$(date +%s)
+          # elapsed=$((end_time - start_time))
+          # echo "⏱️ [build primus docker-gfx950] Total elapsed time: ${elapsed} seconds"
 
-          echo "> Build Docker Image with tag: ${{ env.IMAGE_TAG }}-gfx950-ainic"
-          start_time=$(date +%s)
-          mkdir -p $GITHUB_WORKSPACE/.github/workflows/docker/ainic
-          cp /apps/tas/0_public/primus_docker_ci/ainic/ainic_bundle_1.117.1-a-42.tar.gz $GITHUB_WORKSPACE/.github/workflows/docker/ainic/ || { echo "Error: Failed to copy ainic bundle"; exit 1; }
-          docker build -f $GITHUB_WORKSPACE/.github/workflows/docker/Dockerfile_gfx950_ainic \
-               -t tasimage/primus:${{env.IMAGE_TAG}}-gfx950-ainic \
-               --build-arg PRIMUS_TURBO_COMMIT=${PRIMUS_TURBO_COMMIT} \
-               --build-arg AINIC_BUNDLE_PATH=ainic \
-               $GITHUB_WORKSPACE/.github/workflows/docker
-          end_time=$(date +%s)
-          elapsed=$((end_time - start_time))
-          echo "⏱️ [build primus docker-gfx950-ainic] Total elapsed time: ${elapsed} seconds"
+          # echo "> Build Docker Image with tag: ${{ env.IMAGE_TAG }}-gfx950-ainic"
+          # start_time=$(date +%s)
+          # mkdir -p $GITHUB_WORKSPACE/.github/workflows/docker/ainic
+          # cp /apps/tas/0_public/primus_docker_ci/ainic/ainic_bundle_1.117.1-a-42.tar.gz $GITHUB_WORKSPACE/.github/workflows/docker/ainic/ || { echo "Error: Failed to copy ainic bundle"; exit 1; }
+          # docker build -f $GITHUB_WORKSPACE/.github/workflows/docker/Dockerfile_gfx950_ainic \
+          #      -t tasimage/primus:${{env.IMAGE_TAG}}-gfx950-ainic \
+          #      --build-arg PRIMUS_TURBO_COMMIT=${PRIMUS_TURBO_COMMIT} \
+          #      --build-arg AINIC_BUNDLE_PATH=ainic \
+          #      $GITHUB_WORKSPACE/.github/workflows/docker
+          # end_time=$(date +%s)
+          # elapsed=$((end_time - start_time))
+          # echo "⏱️ [build primus docker-gfx950-ainic] Total elapsed time: ${elapsed} seconds"
 
           echo "> Build Docker Image with tag: ${{ env.IMAGE_TAG }}-jax"
           start_time=$(date +%s)
@@ -130,8 +130,8 @@ jobs:
 
           echo "> Docker tag image for Docker Hub"
           docker tag tasimage/primus:${{env.IMAGE_TAG}} docker.io/tasimage/primus:${{env.IMAGE_TAG}}
-          docker tag tasimage/primus:${{env.IMAGE_TAG}}-gfx950 docker.io/tasimage/primus:${{env.IMAGE_TAG}}-gfx950
-          docker tag tasimage/primus:${{env.IMAGE_TAG}}-gfx950-ainic docker.io/tasimage/primus:${{env.IMAGE_TAG}}-gfx950-ainic
+          # docker tag tasimage/primus:${{env.IMAGE_TAG}}-gfx950 docker.io/tasimage/primus:${{env.IMAGE_TAG}}-gfx950
+          # docker tag tasimage/primus:${{env.IMAGE_TAG}}-gfx950-ainic docker.io/tasimage/primus:${{env.IMAGE_TAG}}-gfx950-ainic
           docker tag tasimage/primus:${{env.IMAGE_TAG}}-jax docker.io/tasimage/primus:${{env.IMAGE_TAG}}-jax
           echo "> Login to Primus Docker Hub"
           docker login -u tasimage -p ${{ secrets.PRIMUS_DOCKER_HUB_TOKEN }}
@@ -139,8 +139,8 @@ jobs:
           echo "> Docker push to Docker Hub"
           start_time=$(date +%s)
           docker push docker.io/tasimage/primus:${{env.IMAGE_TAG}}
-          docker push docker.io/tasimage/primus:${{env.IMAGE_TAG}}-gfx950
-          docker push docker.io/tasimage/primus:${{env.IMAGE_TAG}}-gfx950-ainic
+          # docker push docker.io/tasimage/primus:${{env.IMAGE_TAG}}-gfx950
+          # docker push docker.io/tasimage/primus:${{env.IMAGE_TAG}}-gfx950-ainic
           docker push docker.io/tasimage/primus:${{env.IMAGE_TAG}}-jax
           end_time=$(date +%s)
           elapsed=$((end_time - start_time))
@@ -157,7 +157,7 @@ jobs:
     env:
       PRIMUS_WORKDIR: /apps/tas/0_public/primus_k8s_ci/torch
     needs: [code-lint]
-    runs-on: [primus-pytorch-runner-xrlc6]
+    runs-on: [primus-lm-cicd-rx2s6]
     steps:
       - run: echo "🎉 Begin Primus-Turbo Checkout."
       - name: Set commit hash to env
