Prepare Primus v0.5.0 release (rebase + image update + UT validation) (#335)
This PR prepares for the Primus v0.5.0 release.

Changes included:
1. Rebased the feature branch onto the latest `main` (2 weeks newer).
2. Updated all training and UT docker images to ROCm v25.10.
3. Ensured compatibility against recent changes in main.
4. Full UT validation is enabled on CI.

This PR will be merged once all UT tests pass.

---------

Co-authored-by: alfuyao1986 <81382865+alfuyao1986@users.noreply.github.com>
Co-authored-by: clairesonglee <claire.lee2@amd.com>
Co-authored-by: vidushi8 <vidgoyal@amd.com>
Co-authored-by: DCCS-4317 <yanyuqin@chi-mi325x-pod2-103.ord.vultr.cpe.ice.amd.com>
Co-authored-by: liyingli <liyingli@amd.com>
Co-authored-by: JohnQinAMD <yanyuan.qin@amd.com>
Co-authored-by: Your Name <you@example.com>

--- a/examples/megatron/configs/MI355X/deepseek_v2-pretrain.yaml
+++ b/examples/megatron/configs/MI355X/deepseek_v2-pretrain.yaml
@@ -68,6 +68,8 @@ modules:
       # MLA
       multi_latent_attention: false
 
+      multi_latent_attention: true
+
       # ckpt
       finetune: false
       auto_continue_train: false
