--- a/examples/torchtitan/configs/MI300X/llama3.1_70B-BF16-pretrain.yaml
+++ b/examples/torchtitan/configs/MI300X/llama3.1_70B-BF16-pretrain.yaml
@@ -20,10 +20,12 @@ modules:
         warmup_steps: 10
 
       metrics:
-        log_freq: 1
+        log_freq: 10
 
       training:
         local_batch_size: 4
+        seq_len: 8192
+        mock_data: false
         steps: 50
 
       optimizer:
