--- a/examples/torchtitan/configs/MI300X/llama3.1_70B-FP8-pretrain.yaml
+++ b/examples/torchtitan/configs/MI300X/llama3.1_70B-FP8-pretrain.yaml
@@ -20,10 +20,12 @@ modules:
         warmup_steps: 10
 
       metrics:
-        log_freq: 1
+        log_freq: 10
 
       training:
         local_batch_size: 3
+        seq_len: 8192
+        mock_data: false
         steps: 50
 
       optimizer:
@@ -32,10 +34,12 @@ modules:
       activation_checkpoint:
         mode: full
 
-      float8:
-        enable_fsdp_float8_all_gather: true
-        precompute_float8_dynamic_scale_for_fsdp: true
-        filter_fqns: ["output"]
+      quantize:
+        linear:
+          float8:
+            enable_fsdp_float8_all_gather: true
+            precompute_float8_dynamic_scale_for_fsdp: true
+            filter_fqns: ["output"]
 
       primus_turbo:
         enable_primus_turbo : true
