--- a/examples/torchtitan/configs/MI300X/llama3.1_8B-BF16-pretrain.yaml
+++ b/examples/torchtitan/configs/MI300X/llama3.1_8B-BF16-pretrain.yaml
@@ -16,7 +16,7 @@ modules:
       stderr_sink_level: INFO
 
       metrics:
-        log_freq: 1
+        log_freq: 10
         enable_wandb: false
 
       lr_scheduler:
@@ -25,6 +25,8 @@ modules:
 
       training:
         local_batch_size: 3
+        seq_len: 8192
+        mock_data: false
         steps: 50
 
       activation_checkpoint:
