--- a/examples/torchtitan/configs/MI300X/llama3.1_8B-FP8-pretrain.yaml
+++ b/examples/torchtitan/configs/MI300X/llama3.1_8B-FP8-pretrain.yaml
@@ -20,20 +20,24 @@ modules:
         warmup_steps: 10
 
       metrics:
-        log_freq: 1
+        log_freq: 10
 
       training:
         local_batch_size: 4
+        seq_len: 8192
+        mock_data: false
         steps: 50
 
       activation_checkpoint:
         mode: "none"  # ["none", "selective", "full"]
         selective_ac_option: "op"  # "int" = ac every positive int layer or 'op', ac based on ops policy
 
-      float8:
-        enable_fsdp_float8_all_gather: true
-        precompute_float8_dynamic_scale_for_fsdp: true
-        filter_fqns: ["output"]
+      quantize:
+        linear:
+          float8:
+            enable_fsdp_float8_all_gather: true
+            precompute_float8_dynamic_scale_for_fsdp: true
+            filter_fqns: ["output"]
 
       primus_turbo:
         enable_primus_turbo: true
