--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -92,32 +92,53 @@ jobs:
           start_time=$(date +%s)
           docker build -f $GITHUB_WORKSPACE/.github/workflows/docker/Dockerfile \
                -t tasimage/primus:${{env.IMAGE_TAG}} \
-               --build-arg PRIMUS_TURBO_COMMIT=${PRIMUS_TURBO_COMMIT} .
+               --build-arg PRIMUS_TURBO_COMMIT=${PRIMUS_TURBO_COMMIT} \
+               $GITHUB_WORKSPACE/.github/workflows/docker
           end_time=$(date +%s)
           elapsed=$((end_time - start_time))
           echo "⏱️ [build primus docker] Total elapsed time: ${elapsed} seconds"
 
-          # echo "> Build Docker Image with tag: ${{ env.IMAGE_TAG }}-gfx950"
-          # start_time=$(date +%s)
-          # docker build -f $GITHUB_WORKSPACE/.github/workflows/docker/Dockerfile_gfx950 \
-          #      -t tasimage/primus:${{env.IMAGE_TAG}}-gfx950 \
-          #      --build-arg PRIMUS_TURBO_COMMIT=${PRIMUS_TURBO_COMMIT} .
-          # end_time=$(date +%s)
-          # elapsed=$((end_time - start_time))
-          # echo "⏱️ [build primus docker-gfx950] Total elapsed time: ${elapsed} seconds"
+          docker tag tasimage/primus:${{env.IMAGE_TAG}} docker.io/tasimage/primus:${{env.IMAGE_TAG}}
+          docker login -u tasimage -p ${{ secrets.PRIMUS_DOCKER_HUB_TOKEN }}
+          docker push docker.io/tasimage/primus:${{env.IMAGE_TAG}}
+          docker login -u rocmshared -p ${{ secrets.ROCM_DOCKER_HUB_TOKEN }}
 
-          # echo "> Build Docker Image with tag: ${{ env.IMAGE_TAG }}-gfx950-ainic"
+          # echo "> Build Docker Image with tag: ${{ env.IMAGE_TAG }}-v25.09-ainic"
           # start_time=$(date +%s)
           # mkdir -p $GITHUB_WORKSPACE/.github/workflows/docker/ainic
           # cp /apps/tas/0_public/primus_docker_ci/ainic/ainic_bundle_1.117.1-a-42.tar.gz $GITHUB_WORKSPACE/.github/workflows/docker/ainic/ || { echo "Error: Failed to copy ainic bundle"; exit 1; }
-          # docker build -f $GITHUB_WORKSPACE/.github/workflows/docker/Dockerfile_gfx950_ainic \
-          #      -t tasimage/primus:${{env.IMAGE_TAG}}-gfx950-ainic \
+          # docker build -f $GITHUB_WORKSPACE/.github/workflows/docker/Dockerfile_v25.09_ainic \
+          #      -t tasimage/primus:${{env.IMAGE_TAG}}-v25.09-ainic \
           #      --build-arg PRIMUS_TURBO_COMMIT=${PRIMUS_TURBO_COMMIT} \
           #      --build-arg AINIC_BUNDLE_PATH=ainic \
           #      $GITHUB_WORKSPACE/.github/workflows/docker
           # end_time=$(date +%s)
           # elapsed=$((end_time - start_time))
-          # echo "⏱️ [build primus docker-gfx950-ainic] Total elapsed time: ${elapsed} seconds"
+          # echo "⏱️ [build primus docker-v25.09-ainic] Total elapsed time: ${elapsed} seconds"
+
+          # docker tag tasimage/primus:${{env.IMAGE_TAG}}-v25.09-ainic docker.io/tasimage/primus:${{env.IMAGE_TAG}}-v25.09-ainic
+          # docker login -u tasimage -p ${{ secrets.PRIMUS_DOCKER_HUB_TOKEN }}
+          # docker push docker.io/tasimage/primus:${{env.IMAGE_TAG}}-v25.09-ainic
+          # docker login -u rocmshared -p ${{ secrets.ROCM_DOCKER_HUB_TOKEN }}
+
+          echo "> Build Docker Image with tag: ${{ env.IMAGE_TAG }}-v25.10-ainic"
+          start_time=$(date +%s)
+          mkdir -p $GITHUB_WORKSPACE/.github/workflows/docker/ainic
+          cp /apps/tas/0_public/primus_docker_ci/ainic/ainic_bundle_1.117.5-a-38.tar.gz $GITHUB_WORKSPACE/.github/workflows/docker/ainic/ || { echo "Error: Failed to copy ainic bundle"; exit 1; }
+          cp /apps/tas/0_public/primus_docker_ci/ainic/amd-anp-v1.3.0.patch $GITHUB_WORKSPACE/.github/workflows/docker/ainic/
+          docker build -f $GITHUB_WORKSPACE/.github/workflows/docker/Dockerfile_v25.10_ainic \
+               -t tasimage/primus:${{env.IMAGE_TAG}}-v25.10-ainic \
+               --build-arg PRIMUS_TURBO_COMMIT=${PRIMUS_TURBO_COMMIT} \
+               --build-arg AINIC_BUNDLE_PATH=ainic \
+               $GITHUB_WORKSPACE/.github/workflows/docker
+          end_time=$(date +%s)
+          elapsed=$((end_time - start_time))
+          echo "⏱️ [build primus docker-v25.10-ainic] Total elapsed time: ${elapsed} seconds"
+
+          docker tag tasimage/primus:${{env.IMAGE_TAG}}-v25.10-ainic docker.io/tasimage/primus:${{env.IMAGE_TAG}}-v25.10-ainic
+          docker login -u tasimage -p ${{ secrets.PRIMUS_DOCKER_HUB_TOKEN }}
+          docker push docker.io/tasimage/primus:${{env.IMAGE_TAG}}-v25.10-ainic
+          docker login -u rocmshared -p ${{ secrets.ROCM_DOCKER_HUB_TOKEN }}
 
           echo "> Build Docker Image with tag: ${{ env.IMAGE_TAG }}-jax"
           start_time=$(date +%s)
@@ -129,29 +150,17 @@ jobs:
           echo "⏱️ [build primus docker-jax] Total elapsed time: ${elapsed} seconds"
 
           echo "> Docker tag image for Docker Hub"
-          docker tag tasimage/primus:${{env.IMAGE_TAG}} docker.io/tasimage/primus:${{env.IMAGE_TAG}}
-          # docker tag tasimage/primus:${{env.IMAGE_TAG}}-gfx950 docker.io/tasimage/primus:${{env.IMAGE_TAG}}-gfx950
-          # docker tag tasimage/primus:${{env.IMAGE_TAG}}-gfx950-ainic docker.io/tasimage/primus:${{env.IMAGE_TAG}}-gfx950-ainic
           docker tag tasimage/primus:${{env.IMAGE_TAG}}-jax docker.io/tasimage/primus:${{env.IMAGE_TAG}}-jax
-          echo "> Login to Primus Docker Hub"
           docker login -u tasimage -p ${{ secrets.PRIMUS_DOCKER_HUB_TOKEN }}
-
-          echo "> Docker push to Docker Hub"
-          start_time=$(date +%s)
-          docker push docker.io/tasimage/primus:${{env.IMAGE_TAG}}
-          # docker push docker.io/tasimage/primus:${{env.IMAGE_TAG}}-gfx950
-          # docker push docker.io/tasimage/primus:${{env.IMAGE_TAG}}-gfx950-ainic
           docker push docker.io/tasimage/primus:${{env.IMAGE_TAG}}-jax
-          end_time=$(date +%s)
-          elapsed=$((end_time - start_time))
-          echo "⏱️ [push primus docker] Total elapsed time: ${elapsed} seconds"
+          docker login -u rocmshared -p ${{ secrets.ROCM_DOCKER_HUB_TOKEN }}
 
           # echo "> Docker cleanup local images"
           # docker rmi tasimage/primus:${{env.IMAGE_TAG}}
-          # docker rmi tasimage/primus:${{env.IMAGE_TAG}}-gfx950
-          # docker rmi tasimage/primus:${{env.IMAGE_TAG}}-gfx950-ainic
+          # docker rmi tasimage/primus:${{env.IMAGE_TAG}}-v25.09-ainic
+          # docker rmi tasimage/primus:${{env.IMAGE_TAG}}-v25.10-ainic
           # docker rmi tasimage/primus:${{env.IMAGE_TAG}}-jax
-          # echo "> build-docker success"
+          echo "> build-docker success"
 
   run-unittest:
     env:
