--- a/.github/workflows/docker/Dockerfile
+++ b/.github/workflows/docker/Dockerfile
@@ -1,5 +1,5 @@
 # Base image
-FROM docker.io/rocm/megatron-lm:v25.10
+FROM docker.io/rocm/primus:v25.10
 
 # Specify the commit of Primus-Turbo when building: docker build --build-arg PRIMUS_TURBO_COMMIT=xxx .)
 ARG PRIMUS_TURBO_COMMIT
@@ -18,6 +18,7 @@ RUN mkdir -p /opt && cd /opt && \
     GPU_ARCHS="gfx942;gfx950" pip3 install --no-build-isolation .
 
 RUN apt-get install --reinstall binutils -y && apt-get install numactl -y
+
 
 # Set the default working directory
 WORKDIR /opt
