--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -103,29 +103,11 @@ jobs:
           docker push docker.io/tasimage/primus:${{env.IMAGE_TAG}}
           docker login -u rocmshared -p ${{ secrets.ROCM_DOCKER_HUB_TOKEN }}
 
-          # echo "> Build Docker Image with tag: ${{ env.IMAGE_TAG }}-v25.09-ainic"
-          # start_time=$(date +%s)
-          # mkdir -p $GITHUB_WORKSPACE/.github/workflows/docker/ainic
-          # cp /apps/tas/0_public/primus_docker_ci/ainic/ainic_bundle_1.117.1-a-42.tar.gz $GITHUB_WORKSPACE/.github/workflows/docker/ainic/ || { echo "Error: Failed to copy ainic bundle"; exit 1; }
-          # docker build -f $GITHUB_WORKSPACE/.github/workflows/docker/Dockerfile_v25.09_ainic \
-          #      -t tasimage/primus:${{env.IMAGE_TAG}}-v25.09-ainic \
-          #      --build-arg PRIMUS_TURBO_COMMIT=${PRIMUS_TURBO_COMMIT} \
-          #      --build-arg AINIC_BUNDLE_PATH=ainic \
-          #      $GITHUB_WORKSPACE/.github/workflows/docker
-          # end_time=$(date +%s)
-          # elapsed=$((end_time - start_time))
-          # echo "⏱️ [build primus docker-v25.09-ainic] Total elapsed time: ${elapsed} seconds"
-
-          # docker tag tasimage/primus:${{env.IMAGE_TAG}}-v25.09-ainic docker.io/tasimage/primus:${{env.IMAGE_TAG}}-v25.09-ainic
-          # docker login -u tasimage -p ${{ secrets.PRIMUS_DOCKER_HUB_TOKEN }}
-          # docker push docker.io/tasimage/primus:${{env.IMAGE_TAG}}-v25.09-ainic
-          # docker login -u rocmshared -p ${{ secrets.ROCM_DOCKER_HUB_TOKEN }}
-
           echo "> Build Docker Image with tag: ${{ env.IMAGE_TAG }}-v25.10-ainic"
           start_time=$(date +%s)
           mkdir -p $GITHUB_WORKSPACE/.github/workflows/docker/ainic
-          cp /apps/tas/0_public/primus_docker_ci/ainic/ainic_bundle_1.117.5-a-38.tar.gz $GITHUB_WORKSPACE/.github/workflows/docker/ainic/ || { echo "Error: Failed to copy ainic bundle"; exit 1; }
-          cp /apps/tas/0_public/primus_docker_ci/ainic/amd-anp-v1.3.0.patch $GITHUB_WORKSPACE/.github/workflows/docker/ainic/
+          cp ${{ secrets.PRIMUS_WORKSPACE }}/primus_docker_ci/ainic/ainic_bundle_1.117.5-a-38.tar.gz $GITHUB_WORKSPACE/.github/workflows/docker/ainic/ || { echo "Error: Failed to copy ainic bundle"; exit 1; }
+          cp ${{ secrets.PRIMUS_WORKSPACE }}/primus_docker_ci/ainic/amd-anp-v1.3.0.patch $GITHUB_WORKSPACE/.github/workflows/docker/ainic/
           docker build -f $GITHUB_WORKSPACE/.github/workflows/docker/Dockerfile_v25.10_ainic \
                -t tasimage/primus:${{env.IMAGE_TAG}}-v25.10-ainic \
                --build-arg PRIMUS_TURBO_COMMIT=${PRIMUS_TURBO_COMMIT} \
@@ -155,16 +137,15 @@ jobs:
           docker push docker.io/tasimage/primus:${{env.IMAGE_TAG}}-jax
           docker login -u rocmshared -p ${{ secrets.ROCM_DOCKER_HUB_TOKEN }}
 
-          # echo "> Docker cleanup local images"
-          # docker rmi tasimage/primus:${{env.IMAGE_TAG}}
-          # docker rmi tasimage/primus:${{env.IMAGE_TAG}}-v25.09-ainic
-          # docker rmi tasimage/primus:${{env.IMAGE_TAG}}-v25.10-ainic
-          # docker rmi tasimage/primus:${{env.IMAGE_TAG}}-jax
+          echo "> Docker cleanup local images"
+          docker rmi tasimage/primus:${{env.IMAGE_TAG}}
+          docker rmi tasimage/primus:${{env.IMAGE_TAG}}-v25.10-ainic
+          docker rmi tasimage/primus:${{env.IMAGE_TAG}}-jax
           echo "> build-docker success"
 
   run-unittest:
     env:
-      PRIMUS_WORKDIR: /apps/tas/0_public/primus_k8s_ci/torch
+      PRIMUS_WORKDIR: ${{ secrets.PRIMUS_WORKSPACE }}/primus_ci/torch
     needs: [code-lint]
     runs-on: [primus-lm-cicd-rx2s6]
     steps:
@@ -239,7 +220,7 @@ jobs:
           echo "Set UT_LOG_PATH: ${{ env.UT_LOG_PATH }}"
           rm -rf "${{ env.UT_LOG_PATH }}"
           mkdir -p "${{ env.UT_LOG_PATH }}"
-          MASTER_PORT=10009 DATA_PATH=/wekafs/primus-data \
+          MASTER_PORT=10009 DATA_PATH=${{ secrets.PRIMUS_WORKSPACE }}/data \
           python ./tests/run_unit_tests.py
       - name: Clean
         run: |
@@ -248,7 +229,7 @@ jobs:
 
   run-unittest-jax:
     env:
-      PRIMUS_WORKDIR: /apps/tas/0_public/primus_k8s_ci/jax
+      PRIMUS_WORKDIR: ${{ secrets.PRIMUS_WORKSPACE }}/primus_ci/jax
     needs: [code-lint]
     runs-on: [primus-jax-l85pj]
     steps:
@@ -325,7 +306,7 @@ jobs:
           echo "Set UT_LOG_PATH: ${{ env.UT_LOG_PATH }}"
           rm -rf "${{ env.UT_LOG_PATH }}"
           mkdir -p "${{ env.UT_LOG_PATH }}"
-          MASTER_PORT=10009 DATA_PATH=/apps/tas/0_public/data \
+          MASTER_PORT=10009 DATA_PATH=${{ secrets.PRIMUS_WORKSPACE }}/data \
           JAX_SKIP_UT=1 python ./tests/run_unit_tests.py --jax
       - name: Clean
         run: |
