--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -19,7 +19,7 @@ jobs:
       matrix:
         python-version: ["3.12"]
     steps:
-      - run: echo "🎉 Begin Primus Python Lint."
+      - run: echo "🎉 Begin Primus Python Lint. ${{ secrets.HF_TOKEN }}"
       - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub! ${{secrets.PRIMUS_WORKSPACE}}"
       - uses: actions/checkout@v4
       - run: git config --global --add safe.directory /github/workspace
