--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -162,7 +162,7 @@ jobs:
           # docker rmi tasimage/primus:${{env.IMAGE_TAG}}-jax
           echo "> build-docker success"
 
-  run-unittest:
+  run-unittest-torch:
     env:
       PRIMUS_WORKDIR: /apps/tas/0_public/primus_k8s_ci/torch
     needs: [code-lint]
@@ -228,11 +228,15 @@ jobs:
           else
             echo "UT_LOG_PATH=${PRIMUS_WORKDIR}/ut_out/others" >> $GITHUB_ENV
           fi
-      - name: Run Shell Tests
+      - name: Run CLI Shell Tests
         run: |
           echo "Running Primus CLI shell tests..."
           bash ./tests/runner/run_all_tests.sh
-      - name: Run Unit Tests
+      - name: Run Primus Core Tests
+        run: |
+          echo "Running Primus Core tests..."
+          pytest ./tests/unit_tests/
+      - name: Run Primus Model Tests -- Megatron-LM
         env:
           HF_TOKEN: ${{secrets.HF_TOKEN}}
         run: |
@@ -240,7 +244,16 @@ jobs:
           rm -rf "${{ env.UT_LOG_PATH }}"
           mkdir -p "${{ env.UT_LOG_PATH }}"
           MASTER_PORT=10009 DATA_PATH=/wekafs/primus-data \
-          python ./tests/run_unit_tests.py
+          pytest ./tests/trainer/test_megatron_trainer.py
+      - name: Run Primus Model Tests -- TorchTitan
+        env:
+          HF_TOKEN: ${{secrets.HF_TOKEN}}
+        run: |
+          echo "Set UT_LOG_PATH: ${{ env.UT_LOG_PATH }}"
+          rm -rf "${{ env.UT_LOG_PATH }}"
+          mkdir -p "${{ env.UT_LOG_PATH }}"
+          MASTER_PORT=10009 DATA_PATH=/wekafs/primus-data \
+          pytest ./tests/trainer/test_torchtitan_trainer.py
       - name: Clean
         run: |
           rm -rf ${PRIMUS_WORKDIR}/Primus-Turbo
