--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -217,7 +217,7 @@ jobs:
       - name: Run Primus Core Tests
         run: |
           echo "Running Primus Core tests..."
-          pytest ./tests/unit_tests/
+          pytest  --maxfail=1 -s ./tests/unit_tests/
       - name: Run Primus Model Tests -- Megatron-LM
         env:
           HF_TOKEN: ${{secrets.HF_TOKEN}}
@@ -226,7 +226,7 @@ jobs:
           rm -rf "${{ env.UT_LOG_PATH }}"
           mkdir -p "${{ env.UT_LOG_PATH }}"
           MASTER_PORT=10009 DATA_PATH=/wekafs/primus-data \
-          pytest ./tests/trainer/test_megatron_trainer.py
+          pytest  --maxfail=1 -s ./tests/trainer/test_megatron_trainer.py
       - name: Run Primus Model Tests -- TorchTitan
         env:
           HF_TOKEN: ${{secrets.HF_TOKEN}}
@@ -235,7 +235,7 @@ jobs:
           rm -rf "${{ env.UT_LOG_PATH }}"
           mkdir -p "${{ env.UT_LOG_PATH }}"
           MASTER_PORT=10009 DATA_PATH=/wekafs/primus-data \
-          pytest ./tests/trainer/test_torchtitan_trainer.py
+          pytest  --maxfail=1 -s ./tests/trainer/test_torchtitan_trainer.py
       - name: Clean
         run: |
           rm -rf ${PRIMUS_WORKDIR}/Primus-Turbo
