--- a/examples/megatron/configs/MI300X/gpt_oss_20B-pretrain.yaml
+++ b/examples/megatron/configs/MI300X/gpt_oss_20B-pretrain.yaml
@@ -21,13 +21,18 @@ modules:
       log_avg_reset_interval: 50
 
       # profile
-      profile: true
-      use_pytorch_profiler: true
+      profile: false
+      use_pytorch_profiler: false
       profile_step_end: 7
       profile_step_start: 6
 
+      # precision (mixed precision training)
+      bf16: true
+      fp16: false
+      fp8: null  # Set to "e4m3" or "hybrid" for FP8 training
+
       # hyper parameters
-      train_iters: 20
+      train_iters: 200
       micro_batch_size: 4
       global_batch_size: 640
       seq_length: ${PRIMUS_SEQ_LENGTH:4096}
@@ -52,10 +57,10 @@ modules:
       overlap_param_gather: true
 
       # data
-      mock_data: true
-      train_data_path: ${TOKENIZED_DATA_PATH:null}
-      valid_data_path: null
-      test_data_path: null
+      mock_data: false
+      train_data_path: "10 /data/c4-train.en_6_text_document"
+      valid_data_path: "/data/c4-validation-91205-samples.en_text_document"
+      test_data_path: "/data/c4-validation-91205-samples.en_text_document"
 
       # fusion
       # 20250321: need latest megatron docker image
@@ -63,13 +68,18 @@ modules:
       # fused wgrad gemm and accumulation
       gradient_accumulation_fusion: false
       # recommend set `false` in fp8
-      moe_use_legacy_grouped_gemm: false
+      moe_use_legacy_grouped_gemm: true
       # fused topk router with aux score
       moe_use_fused_router_with_aux_score: false
       # MLA
       multi_latent_attention: false
       # rope fusion
       apply_rope_fusion: false
+
+      # DeepEP does not support moe_shared_expert_overlap
+      moe_shared_expert_overlap: false
+      # DeepEP only supports float32 probs
+      moe_router_dtype: fp32
 
       # ckpt
       finetune: false
@@ -82,6 +92,7 @@ modules:
       no_save_optim: null
       no_save_rng: null
       disable_last_saving: true
+      exit_on_missing_checkpoint: false
       ckpt_format: torch
       eval_iters: 0
 
@@ -105,3 +116,5 @@ modules:
       # Cross entropy flags
       # cross_entropy_fusion_impl: "te"
       # cross_entropy_loss_fusion: true
+
+
