feat: Add TraceLens integration for trace analysis with MLflow upload
- Add TraceLens trace analysis report generation (XLSX, CSV formats)
- Add mlflow_upload_tracelens_report config option (default: false)
- Add mlflow_tracelens_ranks, mlflow_tracelens_max_reports options
- Add mlflow_tracelens_output_format option (all, xlsx, csv)
- Auto-install TraceLens from GitHub if not present
- Upload analysis reports to MLflow artifacts/trace_analysis/

--- a/primus/configs/modules/megatron/primus_megatron_module.yaml
+++ b/primus/configs/modules/megatron/primus_megatron_module.yaml
@@ -5,6 +5,12 @@ disable_wandb: true
 disable_mlflow: true
 mlflow_run_name: null
 mlflow_experiment_name: null
+mlflow_upload_traces: true           # Upload profiler trace files to MLflow
+mlflow_upload_logs: true             # Upload training log files to MLflow
+mlflow_upload_tracelens_report: false  # Generate and upload TraceLens analysis reports
+mlflow_tracelens_ranks: null         # List of ranks to analyze with TraceLens (null = all)
+mlflow_tracelens_max_reports: null   # Max number of TraceLens reports (null = unlimited)
+mlflow_tracelens_output_format: all  # TraceLens report format: all (xlsx+csv), xlsx, or csv
 disable_compile_dependencies: true
 # NOTE:
 # - If `use_rocm_mem_info = True`, ROCm memory information will be collected
