refactor: remove confusing tracelens_max_reports parameter
Removed mlflow_tracelens_max_reports parameter to simplify API and avoid confusion.

Problem:
- Using both 'ranks' and 'max_reports' was confusing
- Example: ranks=[0,4,8,12] + max_reports=2 → only [0,4] analyzed
- Users explicitly specify ranks but get silently truncated

Solution:
- Use tracelens_ranks to control which ranks AND how many
- Want 2 reports? Specify 2 ranks: ranks=[0,8]
- Want all ranks? Use ranks=null
- Clear and explicit behavior

Changes:
- Removed max_reports parameter from all functions
- Removed mlflow_tracelens_max_reports from config
- Updated docstrings to clarify rank-based control
- Simplified logic - no truncation step needed

Migration:
  Before: ranks=[0,4,8,12], max_reports=2
  After:  ranks=[0,4]  # Just specify the ranks you want!

--- a/primus/configs/modules/megatron/primus_megatron_module.yaml
+++ b/primus/configs/modules/megatron/primus_megatron_module.yaml
@@ -20,11 +20,13 @@ mlflow_upload_logs: true             # Upload training log files to MLflow
 #   generate=true,  upload=false  →  Generate reports locally only
 #   generate=false, upload=true   →  Generate AND upload (auto-enabled)
 #   generate=true,  upload=true   →  Generate AND upload (explicit)
+#
+# To limit number of reports: Specify fewer ranks in mlflow_tracelens_ranks
+#   Example: mlflow_tracelens_ranks: [0, 8]  # Only 2 ranks = 2 reports
 # ----------------------------------------------------------------------------
 generate_tracelens_report: false     # Generate TraceLens analysis reports locally
 mlflow_upload_tracelens_report: false  # Upload TraceLens reports to MLflow (implies generation)
-mlflow_tracelens_ranks: null         # List of ranks to analyze with TraceLens (null = all)
-mlflow_tracelens_max_reports: null   # Max number of TraceLens reports (null = unlimited)
+mlflow_tracelens_ranks: null         # List of ranks to analyze (null = all, [0,8] = 2 ranks)
 mlflow_tracelens_output_format: all  # TraceLens report format: all (xlsx+csv), xlsx, or csv
 mlflow_tracelens_cleanup_after_upload: false  # Keep local reports (true to cleanup and save disk space)
 disable_compile_dependencies: true
