--- a/examples/megatron/configs/MI300X/deepseek_v2_lite-pretrain.yaml
+++ b/examples/megatron/configs/MI300X/deepseek_v2_lite-pretrain.yaml
@@ -79,7 +79,7 @@ modules:
 
       # Turbo
       enable_primus_turbo: true
-      use_turbo_attention: true
+      use_turbo_attention: false
       use_turbo_grouped_mlp: true
 
       # deepep
