chore(examples): suppress shellcheck warnings in CLI example scripts
Suppress shellcheck warnings that are intentional in example scripts:
- SC2086: Word splitting for variables (intentional for flexibility)
- SC2048: Use of $* instead of "$@" (intentional for simple examples)
- SC2034: Unused SCRIPT_DIR variable (reserved for future use)

These scripts are meant to be simple examples, not production code.

--- a/runner/.primus.yaml
+++ b/runner/.primus.yaml
@@ -66,12 +66,10 @@ container:
     #   - "/model_weights:/model_weights:ro"
 
     # Environment variables (each passed as --env KEY=VALUE)
-    env: []
-    # env:
-    #   - "NCCL_DEBUG=INFO"
-    #   - "TORCH_DISTRIBUTED_DEBUG=DETAIL"
-    #   - "CUDA_VISIBLE_DEVICES=0,1,2,3"
-    #   - "WANDB_API_KEY=your-api-key"
+    env:
+      - "HF_TOKEN"
+      - "WANDB_API_KEY"
+      - "ENABLE_NUMA_BINDING"
 
 
 # Direct mode settings
