ci: update GitHub Actions runners and cleanup container script
Changes:
1. Update CI runner labels:
   - run-unittest-torch: primus-lm-cicd-rx2s6 → primus-lm-cicd-tl8m5
   - run-unittest-jax: primus-llm-cicd-jax-7b4zw → primus-llm-cicd-jax-2pqnb

2. Complete cleanup of primus-cli-container.sh:
   - Remove remaining debug echo statements
   - Clean up commented exit statement
   - Matches earlier cleanup commit

Note: Both Torch and JAX CI jobs now include shell tests via:
  bash ./tests/runner/run_all_tests.sh

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -148,7 +148,7 @@ jobs:
     env:
       PRIMUS_WORKDIR: /wekafs/primus-data/primus_safe_ci/torch
     needs: [code-lint]
-    runs-on: [primus-lm-cicd-rx2s6]
+    runs-on: [primus-lm-cicd-tl8m5]
     steps:
       - run: echo "🎉 Begin Primus-Turbo Checkout."
       - name: Set commit hash to env
@@ -247,7 +247,7 @@ jobs:
     env:
       PRIMUS_WORKDIR: /wekafs/primus-data/primus_safe_ci/jax
     needs: [code-lint]
-    runs-on: [primus-llm-cicd-jax-7b4zw]
+    runs-on: [primus-llm-cicd-jax-2pqnb]
     steps:
       - run: echo "🎉 Begin Primus-Turbo Checkout."
       - name: Set commit hash to env
